# experiments

./: .gitignore  CMakeLists.txt  flake.nix
hashtable/: CMakeLists.txt  README.md  To improve.md  hmap.h  hmaphasher.h  table.cpp  table.h
hashtable/tests/: test_hmap.cpp  test_table.cpp
http_1.1_implementation/: CMakeLists.txt  chunked_parsing.md  findings.md  gemini-code-1784107514072.md  http1_parser.cpp  http1_parser.h  http_connection.h  idea-run-through.md  main.cpp  server.cpp  server.h  str_utils.cpp  str_utils.h  unique_fd.h  unique_fd.md
pooled_arena_allocator/: CMakeLists.txt  README.md  arena.cpp  arena.h  objectpool.h
pooled_arena_allocator/tests/: test_arena.cpp  test_objectpool.cpp
